--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="144x144" href="./src/assets/favicons">
+    <link rel="apple-touch-icon" sizes="144x144" href="./src/assets/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicons/favicon-16x16.png">
     <link rel="manifest" href="./src/assets/favicons/site.webmanifest">
